[package]
name = "RsHash"
version = "0.1.0"
edition = "2025"
authors = "BERTELOOT Antoine"
description = "Fast cryptographic hash functions for Python"
license = "MIT"
keywords = ["hash", "sha256", "sha512", "cryptography", "python"]
categories = ["cryptography", "api-bindings"]

[lib]
name = "rshash"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
